[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "two-sum.rs"
name = "two-sum"

[[bin]]
path = "climbing-stairs.rs"
name = "climbing-stairs"

[[bin]]
path = "merge-sorted-array.rs"
name = "merge-sorted-array"

[[bin]]
path = "binary-tree-inorder-traversal.rs"
name = "binary-tree-inorder-traversal"


