[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "two-sum.rs"
name = "two-sum"

[[bin]]
path = "climbing-stairs.rs"
name = "climbing-stairs"

[[bin]]
path = "merge-sorted-array.rs"
name = "merge-sorted-array"

[[bin]]
path = "binary-tree-inorder-traversal.rs"
name = "binary-tree-inorder-traversal"


[[bin]]
path = "symmetric-tree.rs"
name = "symmetric-tree"

[[bin]]
path = "maximum-depth-of-binary-tree.rs"
name = "maximum-depth-of-binary-tree"

[[bin]]
path = "convert-sorted-array-to-binary-search-tree.rs"
name = "convert-sorted-array-to-binary-search-tree"

[[bin]]
path = "pascal-triangle.rs"
name = "pascal-triangle"


[[bin]]
path = "best-time-to-buy-and-sell-stock.rs"
name = "best-time-to-buy-and-sell-stock"

[[bin]]
path = "valid-palindrome.rs"
name = "valid-palindrome"

[[bin]]
path = "sqrtx.rs"
name = "sqrtx"

[[bin]]
path = "single-number.rs"
name = "single-number"

